# weather-tg-bot

./: .env  .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml
bot/: db.sqlite3  start.py
bot/database/: base.py
bot/handlers/: common.py  profile.py  source_handlers.py
bot/keyboards/: choice_kb.py  inline_profile.py  keyboard.py  source_kb.py
bot/middlewares/: session.py  throttle.py
bot/services/weather/: get_data.py
bot/states/: choice_state.py  profile_state.py
bot/utils/: coords.json  get_coords.py
core/: logger.py
